# MyFreeTime

./: .gitignore  README.md
CMakeC++/: CMakeLists.txt  ToDo.cpp  ToDo.h
Chapter 2/: E-2.py
Chapter 3/: E-2.py
Cpp_Temp/: friend_foo.cpp  mutable.cpp  templates.cpp
Cpp_Temp/gtest/: executeTests
HackerRank/: cpp-lower-bound-English.cpp  cpp-sets-English.cpp  vector-erase-English.cpp
Programming-with-Python---T.R.-Padmanabhan/Chapter 2/: E-1.py  E-3.py
Programming-with-Python---T.R.-Padmanabhan/Chapter 3/: E-1.py
VirtualJudge/: Aizu-0000.cpp
python-packaging/packaging_tutorial/: README.md  setup.py
python-packaging/packaging_tutorial/docs/source/: conf.py  index.rst
